<resources>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="title_home">Home</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_manage">MANAGE</string>
    <string name="title_advice">ADVICE</string>
    <string name="signin_up">Sign In/Up</string>
    <string name="title_catcher">CATCHER</string>
    <string name="title_reports">REPORTS</string>
    <string name="app_name">BudgetCatcher</string>
    <string name="action_settings">Settings</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="time_out_error">Cannot reach server: Time out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="facebook_app_id">2047378708887212</string>
    <string name="fb_login_protocol_scheme">fb2047378708887212</string>

    <string name="done">Done</string>
    <string name="loading">Loading...</string>
    <string name="connect_to_internet">Connect internet first</string>
    <string name="no_internet">Connect internet to get proper data</string>
    <string name="successfully_deleted">Successfully deleted</string>
    <string name="delete_failed">Failed to delete</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="updated_failed">Failed to update</string>
    <string name="successfully_added">Successfully added</string>
    <string name="failed_to_added">Failed to add</string>
    <string name="successfully_edited">Successfully edited</string>
    <string name="failed_to_edited">Failed to edit</string>
    <string name="yodlee">Pay your bills</string>
    <string name="pay_your_bills">Pay your bills</string>
    <string name="server_reach_error">Cannot reach server</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="video">Video</string>

</resources>
