<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_catcher"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/title_catcher" />

    <item
        android:id="@+id/navigation_manage"
        android:icon="@drawable/ic_manage_24dp"
        android:title="@string/title_manage" />

    <item
        android:id="@+id/navigation_advice"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/title_advice" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_report_24dp"
        android:title="@string/title_reports" />

</menu>
